    Changed inline toolbars to switch to positioning at the bottom if there's never space to position at the top #TINY-3161
    Fixed the `selection.setContent()` API not running parser filters #TINY-4002
    Fixed formats incorrectly applied or removed when table cells were selected #TINY-4709
    Fixed the `quickimage` button not restricting the file types to images #TINY-4715
    Fixed resize handlers displaying in the wrong location sometimes for remote images #TINY-4732
    Fixed table picker breaking in Firefox on low zoom levels #TINY-4728
    Fixed issue with loading or pasting contents with large base64 encoded images on Safari #TINY-4715
    Fixed supplementary special characters being truncated when inserted into the editor. Patch contributed by mlitwin. #TINY-4791
    Fixed toolbar buttons not set to disabled when the editor is in readonly mode #TINY-4592
    Fixed bug where title, width, height would be set to empty string values when updating an image and removing those using the image dialog #TINY-4786
    Fixed `ObjectResized` event firing when an object wasn't resized #TINY-4161
    Fixed the placeholder not hiding when pasting content into the editor #TINY-4828
    Fixed an issue where the editor would fail to load if local storage was disabled #TINY-5935
Version 5.2.2 (2020-04-23)
    Fixed an issue where anchors could not be inserted on empty lines #TINY-2788
    Fixed text decorations (underline, strikethrough) not consistently inheriting the text color #TINY-4757
    Fixed `format` menu alignment buttons inconsistently applying to images #TINY-4057
    Fixed the floating toolbar drawer height collapsing when the editor is rendered in modal dialogs or floating containers #TINY-4837
    Fixed `media` embed content not processing safely in some cases #TINY-4857
Version 5.2.1 (2020-03-25)
    Fixed the "is decorative" checkbox in the image dialog clearing after certain dialog events #FOAM-11