@@ -10,6 +10,7 @@ Version 5.3.0 (TBD)
     Fixed the `selection.setContent()` API not running parser filters #TINY-4002
     Fixed formats incorrectly applied or removed when table cells were selected #TINY-4709
     Fixed the `quickimage` button not restricting the file types to images #TINY-4715
+    Fixed search and replace ignoring text in nested contenteditable elements #TINY-5967
     Fixed resize handlers displaying in the wrong location sometimes for remote images #TINY-4732
     Fixed table picker breaking in Firefox on low zoom levels #TINY-4728
     Fixed issue with loading or pasting contents with large base64 encoded images on Safari #TINY-4715
